evaluation/test_suite/negative/ub43/3.c
#include <stdio.h>

int main()
{
    int x[2] = {0};
    int y = 2;
    printf("%p\n", (void*)(x + y));
}
